--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "eslint": "^8.3.0",
     "firebase": "^9.5.0",
     "fuse.js": "^6.4.6",
     "normalize.css": "^8.0.1",
