--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
     "styled-components.macro": "^1.0.0",
+    "typescript": "^4.5.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -40,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prettier-eslint": "^13.0.0"
   }
 }
